# studienarbeit-uebungsplattform-fuer-musiker

./: CMakeLists.txt  Main.qml  README.md  main.cpp
audiosource/: DelayAudioSource.h  DistortionAudioSource.h  EffectAudioSource.h  RawAudioSource.h  ReverbAudioSource.h
controller/: audiocontroller.cpp  audiocontroller.h  dbcontroller.cpp  dbcontroller.h
macos/: Info.plist
repository/: Project.h  Recording.h  Tag.h  dbrepository.cpp  dbrepository.h  settings.cpp  settings.h  track.h
service/: audioeffectservice.cpp  audioeffectservice.h  audiomanagerservice.cpp  audiomanagerservice.h  audiomonitoringservice.cpp  audiomonitoringservice.h  audioplaybackservice.cpp  audioplaybackservice.h  audiorecordservice.cpp  audiorecordservice.h  projectservice.cpp  projectservice.h  recordservice.cpp  recordservice.h  tagservice.cpp  tagservice.h  waveformservice.cpp  waveformservice.h
ui/: qmldir
ui/component/: AudioSettingsComponent.qml  CreateProjectComponent.qml  EffectsComponent.qml  ProjectComponent.qml  RecordIslandComponent.qml  TopBarComponent.qml  TrackComponent.qml  WaveFormComponent.qml
ui/page/: OverviewPage.qml  ProjectPage.qml
